Fixed overflow scroll

--- a/css/countdownCss/main.css
+++ b/css/countdownCss/main.css
@@ -19,7 +19,7 @@
 
 .l1-txt1 {
   font-family: 'Poppins';
-  font-weight: 200;
+  font-weight: 300;
   font-size: 1rem;
   line-height: 1.1;
   /* color: rgba(255, 255, 255, 0.5); */
@@ -161,10 +161,8 @@
       display: flex;
       flex-direction: row;
       flex-basis: 70vw;
-      width: 60vw;
+      width: 90vw;
       top: 7rem;
-      left: -5rem;
-      text-shadow: 2px 2px rgb(56, 56, 56);
     }
 }
 
