--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@
   --color-textShadow:#fff;
   --color-textShadow-2:rgba(255, 255, 255, 0.204);
   --color-speaker:#ffffff;
-  --color-navbg:#e5eeff; }
+  --color-navbg:#e5eeff;
+  --color-faq:#7288a2; }
   :root .label__dark:after {
     background-image: url("./../../img/sun.svg"); }
 
@@ -17,7 +18,8 @@ html[data-theme='light'] {
   --color-scroll:#1D2026;
   --color-textShadow:#1d2026c1;
   --color-textShadow-2:#1d202657;
-  --color-speaker:#1d2026; }
+  --color-speaker:#1d2026;
+  --color-faq:#323438; }
   html[data-theme='light'] .label__dark:after {
     background-image: url("./../../img/moon.svg"); }
 
@@ -47,6 +49,8 @@ html {
 
 body {
   box-sizing: border-box;
+  position: relative;
+  overflow-x: hidden;
   font-family: 'Assistant', sans-serif;
   background-color: var(--color-background) !important; }
 
@@ -558,7 +562,7 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
     color: var(--color-heading) !important; }
 
 .accordion .accordion-item {
-  border-bottom: 1px solid #e5e5e5; }
+  border-bottom: 1px solid var(--color-faq); }
   .accordion .accordion-item button[aria-expanded='true'] {
     border-bottom: 1px solid #03b5d2; }
 
@@ -568,7 +572,7 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
   text-align: left;
   width: 100%;
   padding: 1rem 2rem 1rem 0rem;
-  color: #7288a2;
+  color: var(--color-faq);
   font-size: 1.15rem;
   font-weight: 400;
   border: none;
@@ -1178,6 +1182,7 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
   body {
     width: 100%;
     height: 100%;
+    position: relative;
     overflow-x: hidden; }
   div[class$="__container"] {
     margin-top: 2rem; }
@@ -1212,9 +1217,9 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
     width: 1rem;
     top: 95%; }
   .hero {
-    width: 70vw;
-    left: 10vw;
-    top: 30vh; }
+    width: 55vw;
+    left: 60vw;
+    top: -5vh; }
   .about-section {
     clip-path: unset;
     height: auto; }
@@ -1239,9 +1244,6 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
     padding: 0.4rem 2rem;
     font-size: 1.6rem; }
   .darktheme {
-    position: absolute;
-    top: unset;
-    bottom: 10%;
     left: 85%; }
   .teamSponsor--section {
     width: 100vw; }
@@ -1295,99 +1297,4 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
     width: 100px;
     transform: translateY(3rem); }
   .faq__container {
-    padding: unset; }
-  .nav-respo {
-    background-color: transparent;
-    position: fixed;
-    top: 1rem;
-    right: 1rem;
-    width: 100%;
-    height: 70px;
-    z-index: 3;
-    padding: 0; }
-    .nav-respo a {
-      text-decoration: none;
-      color: #000; }
-    .nav-respo .active {
-      color: #679b9b; }
-    .nav-respo a:hover {
-      color: #679b9b; }
-    .nav-respo ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      overflow: auto;
-      background-color: #0799c8; }
-    .nav-respo li a {
-      display: block;
-      padding: 20px 20px;
-      text-decoration: none; }
-    .nav-respo .logo {
-      display: block;
-      float: left;
-      padding: 5px 30px; }
-    .nav-respo .menu {
-      clear: both;
-      max-height: 0px;
-      font-size: 22px;
-      /* top:30px; */
-      margin-top: 10px;
-      transition: max-height 0.5s ease-out; }
-      .nav-respo .menu li button {
-        background-color: transparent;
-        border: none;
-        font-size: 22px;
-        font-family: "Space Grotesk";
-        margin-right: 10px;
-        margin-top: 0; }
-    .nav-respo label {
-      cursor: pointer;
-      display: inline-block;
-      float: right;
-      padding: 42px 30px;
-      position: relative;
-      user-select: none; }
-      .nav-respo label .navicon {
-        background: #f1d1d1;
-        display: block;
-        height: 2px;
-        position: relative;
-        width: 25px; }
-      .nav-respo label .navicon:before,
-      .nav-respo label .navicon:after {
-        background: #333;
-        content: "";
-        display: block;
-        height: 100%;
-        position: absolute;
-        transition: all 0.2s ease-out;
-        width: 100%;
-        top: -5px; }
-    .nav-respo .menu-btn:checked ~ .menu {
-      max-height: 340px; }
-      .nav-respo .menu-btn:checked ~ .menu .navicon {
-        background: transparent; }
-      .nav-respo .menu-btn:checked ~ .menu .navicon:before {
-        transform: rotate(-45deg); }
-      .nav-respo .menu-btn:checked ~ .menu .navicon:after {
-        transform: rotate(45deg); }
-    .nav-respo .nav-respo .menu-btn:checked ~ label:not(.steps) .navicon:before,
-    .nav-respo .nav-respo .menu-btn:checked ~ label:not(.steps) .navicon:after {
-      top: 0; }
-  /* 48em = 768px */ }
-
-@media (min-width: 70em) {
-  .nav-respo h1 {
-    font-size: 50px; }
-  .nav-respo li {
-    float: left; }
-  .nav-respo li a {
-    padding: 20px 30px; }
-  .nav-respo .menu {
-    clear: none;
-    float: right;
-    max-height: none; }
-  .nav-respo label {
-    display: none; }
-  .nav-respo .menu li button {
-    background-color: transparent; } }
+    padding: unset; } }
