--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -25,7 +25,7 @@ $color-primary-background:#e5eeff;
     --color-textShadow-2:rgba(255, 255, 255, 0.204);
     --color-speaker:#ffffff;
     --color-navbg:#e5eeff;
-
+    --color-faq:#7288a2;
     
     .label__dark:after {
         background-image: url("./../../img/sun.svg");
@@ -45,6 +45,7 @@ html[data-theme='light'] {
     
     --color-textShadow-2:#1d202657;
     --color-speaker:#1d2026;
+    --color-faq:#323438;
     
 
         
